hphp/test/zend/good/Zend/tests/traits/language018.php.expectf

Fatal error: Only 'final' and visibility modifiers are allowed in trait alias rule in %s/language018.php on line 7
